--- a/src/common/assets/css/chat.css
+++ b/src/common/assets/css/chat.css
@@ -110,3 +110,17 @@
     margin-top: 3px;
     margin-bottom: 0px;
 }
+
+.logout_btn{
+    background-color: var(--red_button);
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    color: var(--border_color);
+font-family: 'Gilroy-Bold';
+    cursor: pointer;
+    width: 100%;
+    outline: none;
+    font-size: 14px;
+    line-height: 17px;
+}
